carburetor-macro/tests/macro_tests/compile/fail/backend/sync_non_existing_table.rs
use carburetor::prelude::*;

carburetor_sync_config! {
    tables {
        user {
            email -> Text,
        }
    }
    sync_groups {
        error_group {
            user, non_existent
        }
    }
}

carburetor_sync_config! {
    tables {
        user {
            email -> Text,
        }
    }
    sync_groups {
        error_group2 {
            non_existent
        }
    }
}
fn main() {}
